added admin login

--- a/WongZhiYun/file/templates/login.html
+++ b/WongZhiYun/file/templates/login.html
@@ -12,6 +12,13 @@
             <div class="form-box">
                 <form action="#" method="POST">
                     <h1>Login</h1>
+                    <div class="role-box">
+                        <label for="role">Login as</label>
+                        <select name="role" required>
+                            <option value="user">User</option>
+                            <option value="admin">Admin</option>
+                        </select>
+                    </div>
                     <div class="input-box">
                         <input type="email" name="email" placeholder="Email" required>
                         <i class="fa-solid fa-envelope"></i>
