added flash message

--- a/WongZhiYun/file/templates/login.html
+++ b/WongZhiYun/file/templates/login.html
@@ -9,6 +9,19 @@
 
     <body>
         <div class="login-box">
+              <!-- Flash messages -->
+            {% with messages = get_flashed_messages(with_categories=true) %}
+              {% if messages %}
+                <div class="flash-messages">
+                  {% for category, message in messages %}
+                    <div class="alert alert-{{ category }}">
+                      {{ message }}
+                    </div>
+                  {% endfor %}
+                </div>
+              {% endif %}
+            {% endwith %}
+            <!-- End flash messages -->
 
             <div class="form-box">
                 <form action="#" method="POST">
@@ -42,3 +55,14 @@
         </div>
     </body>
 </html>
+
+<script>
+    setTimeout(() => {
+    const flashMessages = document.querySelector('.flash-messages');
+    if (flashMessages) {
+      flashMessages.style.transition = "opacity 0.5s ease";
+      flashMessages.style.opacity = "0";
+      setTimeout(() => flashMessages.remove(), 500); // remove after fade
+    }
+  }, 2000);
+</script>
