--- a/WongZhiYun/file/static/login.css
+++ b/WongZhiYun/file/static/login.css
@@ -11,7 +11,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(90deg, #e2e2e2,#c9d6ff);
+    background: #e1daca
 }
 
 .flash-messages {
@@ -47,9 +47,9 @@ body{
 
 .login-box{
     position: relative;
-    width: 850px;
+    width: 500px;
     height: 550px;
-    background: #fff;
+    background: #918674;
     margin: 20px;
     border-radius: 30px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0,2);
@@ -75,11 +75,11 @@ form{
 .form-box{
     width: 50%;
     height: 100%;
-    background: #fff;
+    background: #f5f5eb;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #333;
+    color: #70685b;
     padding: 40px;
 }
 
@@ -153,7 +153,7 @@ form{
 .btn{
     width: 100%;
     height: 48px;
-    background: #708ef0;
+    background: #797164;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border: none;
@@ -165,51 +165,30 @@ form{
 }
 
 .btn:hover{
-    background: #3a73ed;
+    background: #c1b6a4;
 }
-.toggle-box{
-    width: 50%;
-    height: 100%;
-    background: #708ef0;
-    border-radius: 150px 0 0 150px;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    font-size: 24px;
+
+.register-link {
+    margin-top: 15px;
+    text-align: center;
+    font-size: 14px;
+    color: #666;
+}
+
+.register-link p {
+    margin-bottom: 5px;
+    font-size: 14px;
+    color: #333;
+}
+
+.register-link a {
+    color: #797164;   
     font-weight: 600;
+    text-decoration: underline;
+    transition: 0.3s;
 }
 
-.toggle-box-left{
-    position: absolute;
-    width: 50%;
-    height: 100%;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.btn-register{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 48px;
-    background: #beceff;
-    border-radius: 15px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border: none;
-    outline: none;
-    cursor: pointer;
-    font-size: 16px;
-    color: #110131;
-    font-weight: 600;
-}
-
-.btn-register:hover{
-    background: #3a73ed;
+.register-link a:hover {
+    text-decoration: underline;
+    color: #365edc;  /* darker blue on hover */
 }
