--- a/WongZhiYun/file/templates/login.html
+++ b/WongZhiYun/file/templates/login.html
@@ -45,12 +45,11 @@
                         <a href="/">Forgot Password?</a>
                     </div>
                     <button type="submit" class="btn">Login</button>
-                </form>
-            </div>
-            <div class="toggle-box">
-                <h1>Hello, Welcome!</h1>
-                <p>Don't have an account?</p>
-                <a href="{{ url_for('auth.sign_up') }}" class="btn-register">Register</a>
+                    <div class="register-link">
+                      <p>Don't have an account?</p>
+                      <a href="{{ url_for('auth.sign_up') }}" class="btn-register">Register</a>
+                    </div>
+                  </form>
             </div>
         </div>
     </body>
