--- a/WongZhiYun/file/static/feed.css
+++ b/WongZhiYun/file/static/feed.css
@@ -18,7 +18,7 @@ body h1 {
   display: flex;
   justify-content: space-between; /* left - middle - right */
   align-items: center;
-  background-color: #d4baa3;
+  background-color: #918674;
   padding: 18px 16px;
   box-shadow: 0 1px 4px rgba(0,0,0,0.1);
 }
@@ -27,7 +27,7 @@ body h1 {
 .navbar i.fa-home {
   font-size: 20px;
   cursor: pointer;
-  color: #7b5c4b;
+  color: #efe7da;
 }
 
 /* Middle: search bar */
@@ -62,7 +62,7 @@ body h1 {
 .navbar i.fa-user {
   font-size: 22px;
   cursor: pointer;
-  color: #945303;
+  color: #efe7da;
 }
 
 .acc-wrap{
@@ -153,7 +153,7 @@ body h1 {
     padding: 10px 24px;
     text-decoration: none;
     color: #ab6f10;
-    border: 2px solid #6f4501;
+    border: 2px solid #b3907a;
     border-radius: 25px;
     font-weight: 500;
     transition: all 0.3s ease;
@@ -162,17 +162,17 @@ body h1 {
 
 /* Hover effect */
 .filter-bar a:hover {
-    background: #8f5902;
+    background: #b3907a;
     color: #fff;
 }
 
 /* Active effect */
 .filter-bar a.active {
-    background: linear-gradient(135deg, #a46601, rgb(121, 75, 1));
+    background: #b58d75;
     color: #fff;
-    border-color: #695303;
+    border-color: #7b5c4b;
     font-weight: bold;
-    box-shadow: 0 4px 12px rgba(76,175,80,0.3);
+    box-shadow: 0 4px 12px #b3907a;
     transform: scale(1.05);
 }
 
@@ -231,7 +231,7 @@ body h1 {
 }
 
 .submit-btn {
-    background: #294ba1;
+    background: #918674;
     color: #fff;
     padding: 10px 0;
     border: none;
@@ -242,7 +242,7 @@ body h1 {
 }
 
 .submit-btn:hover {
-    background: #1e3a8a;
+    background: #7b5c4b;
 }
 
 .card-container {
