--- a/WongZhiYun/file/static/home.css
+++ b/WongZhiYun/file/static/home.css
@@ -41,22 +41,22 @@ body{
 }
 
 button{
+    background: #918674;
     width: 200px;
     padding: 15px 0;
     text-align: center;
     margin: 20px 10px;
     border-radius: 20px;
     font-weight: bold;
-    border: 2px solid rgb(185, 212, 254);
-    background: transparent;
-    color: aliceblue;
+    border: 2px solid #696155;
+    color: #fff;
     cursor: pointer;
     transition: 0.5s;
     
 }
 
 button:hover{
-    background: rgb(82, 140, 234);
+    background: #696155;
 }
 
 hr {
