--- a/WongZhiYun/file/static/home.css
+++ b/WongZhiYun/file/static/home.css
@@ -73,7 +73,7 @@ hr {
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    background-color: #efe8e2;
+    background-color: #f5f5eb;
     width: 100%;
     height: 100vh;
 }
