--- a/WongZhiYun/file/templates/feed.html
+++ b/WongZhiYun/file/templates/feed.html
@@ -22,6 +22,10 @@
                 <input class="search-input" type="search" placeholder="Search">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </form>
+
+            <a href="/">
+                <i class="fa-solid fa-comments"></i>
+            </a>
     
             <!-- Right: User Button -->
             <i class= "fa-solid fa-user" onclick="toggleMenu()"></i>
