--- a/WongZhiYun/file/templates/feed.html
+++ b/WongZhiYun/file/templates/feed.html
@@ -58,6 +58,7 @@
                         <p>Edit Profile</p>
                     </a>
                     <a href="{{ url_for('views.my_posts') }}" class="acc-menu-link">
+                        <i class="fa-solid fa-pen"></i>
                         <p>My Posts</p>
                     </a>
                     <a href="{{ url_for('auth.logout') }}" class="acc-menu-link">
