--- a/WongZhiYun/file/templates/profile.html
+++ b/WongZhiYun/file/templates/profile.html
@@ -18,10 +18,12 @@
             <h2>{{ user.username }}</h2>
             <p>Email: {{ user.email }}</p>
             <p>Joined: {{ user.date_created.strftime('%Y-%m-%d') }}</p>
+            {% if current_user.is_authenticated and current_user.id == user.id %}
             <div class="profile-actions">
                 <a href="{{ url_for('views.edit_profile') }}">Edit Profile</a>
                 <a href="{{ url_for('auth.logout') }}">Logout</a>
             </div>
+            {% endif %}
         </div>
     </div>
 
