--- a/WongZhiYun/file/templates/feed.html
+++ b/WongZhiYun/file/templates/feed.html
@@ -11,35 +11,40 @@
 
     <body>
         <nav class="navbar">
-    
-            <!-- Left: Menu Button -->
-            <a href="{{ url_for('views.home') }}">
-                <i class="fa-solid fa-home"></i>
-            </a>
-    
-            <!-- Middle: Search Bar -->
-            <form class="search">
-                <input class="search-input" type="search" placeholder="Search">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </form>
 
-            <div id="chatButton">
-                <i class="fa-solid fa-comments"></i>
+            <div class="nav-left">
+                <!-- Left: Menu Button -->
+                <a href="{{ url_for('views.home') }}">
+                    <i class="fa-solid fa-home"></i>
+                </a>
             </div>
 
-            <!--chat window-->
-            <div id="chatWindow">
-                <div id="chatHeader">
-                    <span>Live Chat</span>
-                    <button id="closeChat">✖</button>
+            <div class="nav-middle">
+                <!-- Middle: Search Bar -->
+                <form class="search">
+                    <input class="search-input" type="search" placeholder="Search">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </form>
+            </div>
+
+            <div class="nav-right">
+                <div id="chatButton">
+                    <i class="fa-solid fa-comments"></i>
                 </div>
-                <iframe id="chatFrame" src=""></iframe>
+
+                <!--chat window-->
+                <div id="chatWindow">
+                    <div id="chatHeader">
+                        <span>Live Chat</span>
+                        <button id="closeChat">✖</button>
+                    </div>
+                    <iframe id="chatFrame" src=""></iframe>
+                </div>
+
+                <!-- Right: User Button -->
+                <i lass= "fa-solid fa-user" onclick="toggleMenu()"></i>
             </div>
-
-
-            <!-- Right: User Button -->
-            <i class= "fa-solid fa-user" onclick="toggleMenu()"></i>
-
+            
             <div class="acc-wrap" id="accMenu">
                 <div class="acc">
                     <div class="acc-menu">
