--- a/WongZhiYun/file/templates/post_detail.html
+++ b/WongZhiYun/file/templates/post_detail.html
@@ -14,3 +14,37 @@
     <small>Posted by {{ post.author.username }} on {{ post.date_posted.strftime('%Y-%m-%d') }}</small>
 
     <hr>
+
+    <h3>Comments</h3>
+    {% for c in comments %}
+    <div class="comment">
+        <div class="comment-avatar-wrapper">
+            {% if c.user.profile_image %}
+                <img class="comment-avatar"
+                     src="{{ url_for('static', filename='profile_pics/' + c.user.profile_image) }}"
+                     alt="{{ c.user.username }}'s avatar">
+            {% else %}
+                <div class="comment-avatar comment-initial">
+                    {{ c.user.username[0]|upper }}
+                </div>
+            {% endif %}
+        </div>
+
+        <div class="comment-body">
+            <a href="{{ url_for('views.public_profile', user_id=c.user.id) }}"
+               class="comment-username">{{ c.user.username }}</a>
+            <p class="comment-text">{{ c.text }}</p>
+            <small class="comment-date">{{ c.date_posted.strftime('%Y-%m-%d %H:%M') }}</small>
+        </div>
+    </div>
+    {% else %}
+      <p>No comments yet.</p>
+    {% endfor %}
+    
+
+    <form method="POST" class="comment-form">
+        <textarea name="comment" rows="3" placeholder="Write a comment..." required></textarea>
+        <button type="submit">Post Comment</button>
+    </form>
+</div>
+{% endblock %}
