--- a/WongZhiYun/file/templates/post_detail.html
+++ b/WongZhiYun/file/templates/post_detail.html
@@ -30,7 +30,16 @@
             {% endif %}
         </div>
 
-       
+        <div class="comment-body">
+            <a href="{{ url_for('views.public_profile', user_id=c.user.id) }}"
+               class="comment-username">{{ c.user.username }}</a>
+            <p class="comment-text">{{ c.text }}</p>
+            <small class="comment-date">{{ c.date_posted.strftime('%Y-%m-%d %H:%M') }}</small>
+        </div>
+    </div>
+    {% else %}
+      <p>No comments yet.</p>
+    {% endfor %}
     
 
     <form method="POST" class="comment-form">
