--- a/WongZhiYun/file/templates/post_details.html
+++ b/WongZhiYun/file/templates/post_details.html
@@ -15,4 +15,23 @@
 
     <hr>
 
+    <h3>Comments</h3>
+
+        <div class="comment-body">
+            <a href="{{ url_for('views.public_profile', user_id=c.user.id) }}"
+               class="comment-username">{{ c.user.username }}</a>
+            <p class="comment-text">{{ c.text }}</p>
+            <small class="comment-date">{{ c.date_posted.strftime('%Y-%m-%d %H:%M') }}</small>
+        </div>
+    </div>
+    {% else %}
+      <p>No comments yet.</p>
+    {% endfor %}
     
+
+    <form method="POST" class="comment-form">
+        <textarea name="comment" rows="3" placeholder="Write a comment..." required></textarea>
+        <button type="submit">Post Comment</button>
+    </form>
+</div>
+{% endblock %}
