--- a/WongZhiYun/file/templates/feed.html
+++ b/WongZhiYun/file/templates/feed.html
@@ -40,9 +40,9 @@
                     </div>
                     <iframe id="chatFrame" src=""></iframe>
                 </div>
-
+                
                 <!-- Right: User Button -->
-                <i lass= "fa-solid fa-user" onclick="toggleMenu()"></i>
+                <i class= "fa-solid fa-user" onclick="toggleMenu()"></i>
             </div>
             
             <div class="acc-wrap" id="accMenu">
