--- a/WongZhiYun/file/templates/login.html
+++ b/WongZhiYun/file/templates/login.html
@@ -40,6 +40,7 @@
                     <div class="input-box">
                         <input type="password" name="password" placeholder="Password" required>
                         <i class="fa-solid fa-lock"></i>
+                        <i class="fa-solid fa-eye toggle-eye" onclick="togglePassword()"></i>
                     </div>
                     <div class="forgot-link">
                         <a href="/">Forgot Password?</a>
