--- a/WongZhiYun/file/static/admin.css
+++ b/WongZhiYun/file/static/admin.css
@@ -10,6 +10,7 @@ h1 {
   margin-bottom: 25px;
   font-weight: 600;
   color: #444;
+  text-align: center;
 }
 
 /* Chart Row */
@@ -46,7 +47,7 @@ h1 {
 }
 
 .bg-info {
-  background-color: #918674 !important; /* earthy tone */
+  background-color: #63553e !important; /* earthy tone */
   color: #fff !important;
 }
 
