change color of admin dashboard

--- a/WongZhiYun/file/static/admin.css
+++ b/WongZhiYun/file/static/admin.css
@@ -47,12 +47,12 @@ h1 {
 }
 
 .bg-info {
-  background-color: #63553e !important; /* earthy tone */
+  background-color: #312f2b !important; /* earthy tone */
   color: #fff !important;
 }
 
 .bg-secondary {
-  background-color: #555 !important; /* neutral grey */
+  background-color: #60553f !important; /* neutral grey */
 }
 
 /* Buttons */
