--- a/WongZhiYun/file/templates/edit_profile.html
+++ b/WongZhiYun/file/templates/edit_profile.html
@@ -1,5 +1,7 @@
 <title>Edit Profile</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='profile.css') }}">
+<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+
 {% block content %}
 <!-- Back button -->
 <a href="{{ url_for('views.profile') }}" class="back-link">
