--- a/WongZhiYun/file/static/feed.css
+++ b/WongZhiYun/file/static/feed.css
@@ -319,6 +319,7 @@ body h1 {
 }
 
 .card {
+    position: relative;
     min-height: 350px;
     background: white;
     border-radius: 12px;
@@ -336,6 +337,18 @@ body h1 {
     width: 100%;
     height: 200px;
     object-fit: cover;
+}
+
+.card img, .card .no-image {
+    width: 100%;
+    height: 200px;
+    object-fit: cover; /* for img only */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f0f0f0;
+    color: #888;
+    font-size: 16px;
 }
 
 .card-content {
