--- a/app/templates/search/form.html
+++ b/app/templates/search/form.html
@@ -1,9 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-    <title>Search Module</title>
+  <title>Image Search</title>
 </head>
 <body>
-    <h1>{{ message }}</h1>
+  <h1>Search by Image</h1>
+  <form action="{{ url_for('search.search_by_image') }}" method="post" enctype="multipart/form-data">
+    <input type="file" name="file" required />
+    <button type="submit">Search</button>
+  </form>
 </body>
 </html>
